UtahLiveDataTest/src/objects/RiskAssessment__c.object
<CustomObject>
    <description>[Business] This will be part of Grant Making Module.</description>
    <fields>
        <fullName>Acknowledgement__c</fullName>
        <label>Acknowledgement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ActivityRisk10__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>Fiscal Review 10</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityRisk11__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>Fiscal Review 11</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActivityRisk12__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>Fiscal Review 12</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreement1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Grantor Risk assessment Fiscal form</description>
        <label>Agreement1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement2__c</fullName>
        <description>This field is used in Grantor Risk Assessment Programmatic form</description>
        <label>Agreement2</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement3__c</fullName>
        <description>This field is used in Grantor Risk Assessment Fiscal form</description>
        <label>Agreement3</label>
        <length>22768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Risk Assessment</relationshipLabel>
        <relationshipName>Risk_Assessment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Assessment4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <description>Area field for Risk Assessment</description>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fiscal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AssessmentDate__c</fullName>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AssignedTo__c</fullName>
        <formula>Grant__r.CreatedBy.FirstName &amp; &quot; &quot; &amp; Grant__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AverageRating__c</fullName>
        <formula>TotalSumofRating__c /  TotalQuestionsSelected__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AwardedAmount__c</fullName>
        <formula>&apos;$&apos;+TEXT( Grant__r.SumofAwardAmount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awarded Amount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentBudgetPeriod__c</fullName>
        <label>Current Budget Period</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNs__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.DUNS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DUNS Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeskReviewDate__c</fullName>
        <label>Desk Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DisableRiskBtn__c</fullName>
        <formula>Grant__r.DisableRiskBtn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disable Risk Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DunsNumberreview__c</fullName>
        <label>Duns Number review</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EIN__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.EINText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinancialComplianceMonitoring__c</fullName>
        <label>Financial&amp;ComplianceMonitoring</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalQuestion1__c</fullName>
        <description>This field is used in Fiscal Risk Assessment form.</description>
        <label>Fiscal Question 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FiscalQuestion2__c</fullName>
        <description>This field is used in Fiscal Risk Assessment form.</description>
        <label>Fiscal Question 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FiscalQuestion3__c</fullName>
        <description>This field is used in Fiscal Risk Assessment form.</description>
        <label>Fiscal Question 3</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FiscalRating__c</fullName>
        <formula>IF(ISNUMBER(TotalDollarAmount__c),VALUE(TotalDollarAmount__c), 0)+IF(ISNUMBER(PreviousGrantExperience__c),VALUE(PreviousGrantExperience__c), 0)+
IF(ISNUMBER(FinancialComplianceMonitoring__c),VALUE(FinancialComplianceMonitoring__c), 0)+IF(ISNUMBER(FiscalReviewQ1__c),VALUE(FiscalReviewQ1__c), 0)+
IF(ISNUMBER(FiscalReviewQ2__c),VALUE(FiscalReviewQ2__c), 0)+IF(ISNUMBER(FiscalReviewQ3__c),VALUE(FiscalReviewQ3__c), 0)+
IF(ISNUMBER(FiscalReviewQ5__c),VALUE(FiscalReviewQ5__c), 0)+IF(ISNUMBER(FiscalReviewQ4__c),VALUE(FiscalReviewQ4__c), 0)+IF(ISNUMBER(FiscalReviewQ6__c),VALUE(FiscalReviewQ6__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FiscalRating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FiscalReviewQ1__c</fullName>
        <label>FiscalReviewQ1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalReviewQ2__c</fullName>
        <label>FiscalReviewQ2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FiscalReviewQ3__c</fullName>
        <label>FiscalReviewQ3</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for validation of form depends upon percentage of form filled.</description>
        <label>Forms Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GMComments__c</fullName>
        <label>Grant Monitor Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GrantMonitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantMonitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Assessment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantPeriodEndDate__c</fullName>
        <formula>Grant__r.ProjectPeriodEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GrantPeriodStartDate__c</fullName>
        <formula>Grant__r.ProjectPeriodStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GrantQuestion10__c</fullName>
        <label>Grant Question 10</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantQuestion1__c</fullName>
        <label>Grant Question 1</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantQuestion2__c</fullName>
        <label>Grant Question 2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantRating__c</fullName>
        <formula>IF(ISNUMBER(ActivityRisk1__c),VALUE(ActivityRisk1__c), 0)+IF(ISNUMBER(ActivityRisk2__c),VALUE(ActivityRisk2__c), 0)+
IF(ISNUMBER(ActivityRisk3__c),VALUE(ActivityRisk3__c), 0)+IF(ISNUMBER(ActivityRisk4__c),VALUE(ActivityRisk4__c), 0)+
IF(ISNUMBER(ActivityRisk5__c),VALUE(ActivityRisk5__c), 0)+IF(ISNUMBER(ActivityRisk6__c),VALUE(ActivityRisk6__c), 0)+
IF(ISNUMBER(ActivityRisk7__c),VALUE(ActivityRisk7__c), 0)+IF(ISNUMBER(ActivityRisk8__c),VALUE(ActivityRisk8__c), 0)+IF(ISNUMBER(ActivityRisk9__c),VALUE(ActivityRisk9__c), 0)+IF(ISNUMBER(ActivityRisk10__c),VALUE(ActivityRisk10__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GrantSupervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Assessment2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Risk Assessment</relationshipLabel>
        <relationshipName>Risk_Assessment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideEditButton__c</fullName>
        <formula>OR(AND(Grant__c!=null,Grant__r.DisableRiskBtn__c),
   ISPICKVAL(Status__c, &apos;Completed&apos;)
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>ISPICKVAL(Status__c, &apos;Completed&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideGMSection__c</fullName>
        <formula>If( $User.Id  =  GrantMonitor__r.Id   &amp;&amp; POGMTasks__c = false , false, IF($User.Id  =  GrantMonitor__r.Id &amp;&amp; CreatedById =   ProjectOfficer__r.Id &amp;&amp; POGMTasks__c = true,false,true))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideGMSection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideNewButton__c</fullName>
        <formula>If( $User.Id =  GrantMonitor__r.Id || $User.Id =  ProjectOfficer__r.Id , false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideNewButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HidePOSection__c</fullName>
        <formula>If( $User.Id =  ProjectOfficer__r.Id &amp;&amp; POGMTasks__c = false, false, IF($User.Id =  ProjectOfficer__r.Id &amp;&amp; CreatedById = GrantMonitor__r.Id &amp;&amp; POGMTasks__c = true,false,true))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HidePOSection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmitButton__c</fullName>
        <defaultValue>true</defaultValue>
        <label>HideSubmitButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsGrantAssociated__c</fullName>
        <formula>NOT(ISBLANK(Grant__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Grant Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGrant__c</fullName>
        <formula>ISPICKVAL(Type__c,&apos;Grant&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProgramAssociated__c</fullName>
        <formula>NOT(ISBLANK(Program__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Program Associated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProgram__c</fullName>
        <formula>ISPICKVAL(Type__c,&apos;Program&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;RA-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NameTemplate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationalQuestion1__c</fullName>
        <description>This field is used in Programmatic Risk Assessment form.</description>
        <label>Operational Question 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OperationalQuestion2__c</fullName>
        <description>This field is used in Programmatic Risk Assessment form.</description>
        <label>Operational Question 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationalQuestion3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used in Programmatic Risk Assessment form.</description>
        <label>Operational Question 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrganizationName__c</fullName>
        <formula>Grant__r.ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OverAll_Risk__c</fullName>
        <label>Overall Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>POComments__c</fullName>
        <label>Project Officer Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>POGMTasks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POGMTasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PageTemplateConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form Config</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>Risk Assessment (Form Config)</relationshipLabel>
        <relationshipName>Risk_Assessment1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousGrantExperience__c</fullName>
        <label>Previous Grant Experience?</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Assessment3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgramQuestion10__c</fullName>
        <label>Program Question 10</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramQuestion11__c</fullName>
        <label>Program Question 11</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramQuestion12__c</fullName>
        <label>Program Question 12</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramRating__c</fullName>
        <formula>IF(ISNUMBER(ProgramQuestion1__c),VALUE(ProgramQuestion1__c), 0)+IF(ISNUMBER(ProgramQuestion2__c),VALUE(ProgramQuestion2__c), 0)+
IF(ISNUMBER(ProgramQuestion3__c),VALUE(ProgramQuestion3__c), 0)+IF(ISNUMBER(ProgramQuestion4__c),VALUE(ProgramQuestion4__c), 0)+
IF(ISNUMBER(ProgramQuestion5__c),VALUE(ProgramQuestion5__c), 0)+IF(ISNUMBER(ProgramQuestion6__c),VALUE(ProgramQuestion6__c), 0)+
IF(ISNUMBER(ProgramQuestion7__c),VALUE(ProgramQuestion7__c), 0)+IF(ISNUMBER(ProgramQuestion8__c),VALUE(ProgramQuestion8__c), 0)+IF(ISNUMBER(ProgramQuestion9__c),VALUE(ProgramQuestion9__c), 0)+IF(ISNUMBER(ProgramQuestion10__c),VALUE(ProgramQuestion10__c), 0)+IF(ISNUMBER(ProgramQuestion11__c),VALUE(ProgramQuestion11__c), 0)+IF(ISNUMBER(ProgramQuestion12__c),VALUE(ProgramQuestion12__c), 0)+IF(ISNUMBER(ProgramQuestion13__c),VALUE(ProgramQuestion13__c), 0)+IF(ISNUMBER(ProgramQuestion14__c),VALUE(ProgramQuestion14__c), 0)+IF(ISNUMBER(ProgramQuestion15__c),VALUE(ProgramQuestion15__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Rating</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Risk Assessment</relationshipLabel>
        <relationshipName>Risk_Assessment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgrammaticQuestion1__c</fullName>
        <description>This field is used in Programmatic Risk Assessment form.</description>
        <label>Programmatic Question 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgrammaticQuestion2__c</fullName>
        <description>This field is used in Programmatic Risk Assessment form.</description>
        <label>Programmatic Question 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgrammaticQuestion3__c</fullName>
        <description>This field is used in Programmatic Risk Assessment form.</description>
        <label>Programmatic Question 3</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgressReport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Progress Report</label>
        <referenceTo>ProgressReports__c</referenceTo>
        <relationshipLabel>Risk Assessment</relationshipLabel>
        <relationshipName>Risk_Assessment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectDescription__c</fullName>
        <formula>Grant__r.ProjectTitle__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectOfficer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Officer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Risk_Assessment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_1__c</fullName>
        <label>Rating 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_2__c</fullName>
        <label>Rating 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating_3__c</fullName>
        <label>Rating 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RiskIndicator__c</fullName>
        <formula>CASE( OverAll_Risk__c ,&apos;Low&apos;, IMAGE(&apos;/resource/GovGrantsImages/b-grn.png&apos;,&apos;Low&apos;), &apos;Medium&apos;, IMAGE(&apos;/resource/GovGrantsImages/b-ylw.png&apos;,&apos;Medium&apos;),IMAGE(&apos;/resource/GovGrantsImages/b-red.png&apos;,&apos;High&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk_Assessment_Phase__c</fullName>
        <label>Risk Assessment Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Award</fullName>
                </value>
                <value>
                    <fullName>Post-Award</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubmittedAudit__c</fullName>
        <label>Submitted Audit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedOn__c</fullName>
        <label>Submitted On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submittedby__c</fullName>
        <formula>Grant__r.Application__r.AssignedTo__r.AccountNameFormulaField__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submitted by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SumRating1__c</fullName>
        <formula>IF(ISNUMBER(ActivityRisk1__c),VALUE(ActivityRisk1__c), 0)+IF(ISNUMBER(ActivityRisk2__c),VALUE(ActivityRisk2__c), 0)+
IF(ISNUMBER(ActivityRisk3__c),VALUE(ActivityRisk3__c), 0)+IF(ISNUMBER(ActivityRisk4__c),VALUE(ActivityRisk4__c), 0)+
IF(ISNUMBER(ActivityRisk5__c),VALUE(ActivityRisk5__c), 0)+IF(ISNUMBER(ActivityRisk6__c),VALUE(ActivityRisk6__c), 0)+
IF(ISNUMBER(ActivityRisk7__c),VALUE(ActivityRisk7__c), 0)+IF(ISNUMBER(ActivityRisk8__c),VALUE(ActivityRisk8__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumRating1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumRating2__c</fullName>
        <formula>IF(ISNUMBER(ActivityRisk9__c),VALUE(ActivityRisk9__c), 0)+IF(ISNUMBER(ActivityRisk10__c),VALUE(ActivityRisk10__c), 0)+
IF(ISNUMBER(ActivityRisk11__c),VALUE(ActivityRisk11__c), 0)+IF(ISNUMBER(ActivityRisk12__c),VALUE(ActivityRisk12__c), 0)+
IF(ISNUMBER(ActivityRisk13__c),VALUE(ActivityRisk13__c), 0)+IF(ISNUMBER(ActivityRisk14__c),VALUE(ActivityRisk14__c), 0)+
IF(ISNUMBER(ActivityRisk15__c),VALUE(ActivityRisk15__c), 0)+IF(ISNUMBER(ActivityRisk16__c),VALUE(ActivityRisk16__c), 0)+
IF(ISNUMBER(ActivityRisk17__c),VALUE(ActivityRisk17__c), 0)+IF(ISNUMBER(ActivityRisk18__c),VALUE(ActivityRisk18__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumRating2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalDollarAmount__c</fullName>
        <label>Total Dollar Amount</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalQuestionsSelected__c</fullName>
        <formula>IF(ISNUMBER(ActivityRisk1__c),1, 0)+IF(ISNUMBER(ActivityRisk2__c),1, 0)+
IF(ISNUMBER(ActivityRisk3__c),1, 0)+IF(ISNUMBER(ActivityRisk4__c),1, 0)+
IF(ISNUMBER(ActivityRisk5__c),1, 0)+IF(ISNUMBER(ActivityRisk6__c),1, 0)+
IF(ISNUMBER(ActivityRisk7__c),1, 0)+IF(ISNUMBER(ActivityRisk8__c),1, 0)+
IF(ISNUMBER(ActivityRisk9__c),1, 0)+IF(ISNUMBER(ActivityRisk10__c),1, 0)+
IF(ISNUMBER(ActivityRisk11__c),1, 0)+IF(ISNUMBER(ActivityRisk12__c),1, 0)+
IF(ISNUMBER(ActivityRisk13__c),1, 0)+IF(ISNUMBER(ActivityRisk14__c),1, 0)+
IF(ISNUMBER(ActivityRisk15__c),1, 0)+IF(ISNUMBER(ActivityRisk16__c),1, 0)+
IF(ISNUMBER(ActivityRisk17__c),1, 0)+IF(ISNUMBER(ActivityRisk18__c),1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TotalQuestionsSelected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalSumofRating__c</fullName>
        <label>Sum of Rating</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Program</fullName>
                </value>
                <value>
                    <fullName>Grantee</fullName>
                </value>
                <value>
                    <fullName>Grant Award</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TypeofPayment__c</fullName>
        <description>This field is used in Fiscal Risk Assessment form.</description>
        <label>Type of Payment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isStatusApproved__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Approved&apos;),ISPICKVAL(Status__c,&apos;Submitted to Grantor&apos;),ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isStatusApproved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>templateName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup to page tempalate for Forms as this can be a form</description>
        <label>Form Config</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>Risk Assessment</relationshipLabel>
        <relationshipName>Risk_Assessment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Risk Assessment</label>
    <listViews>
        <fullName>ALL_NEW</fullName>
        <columns>NAME</columns>
        <columns>ActivityRisk1__c</columns>
        <columns>ActivityRisk2__c</columns>
        <columns>Grant__c</columns>
        <columns>GrantMonitor__c</columns>
        <columns>GMComments__c</columns>
        <columns>GrantSupervisor__c</columns>
        <columns>OverAll_Risk__c</columns>
        <columns>ProgramManager__c</columns>
        <columns>ProjectOfficer__c</columns>
        <columns>POComments__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL_NEW</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RA-{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risk Assessment</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Assessment_Date_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( TEXT(Status__c) == &apos;In Progress&apos; &amp;&amp; AssessmentDate__c &gt; Today(), true,false)</errorConditionFormula>
        <errorMessage>Date selected is in future, Please select correct assessment date</errorMessage>
    </validationRules>
</CustomObject>